# bw-web-api-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: client.rs  config.rs  error.rs  lib.rs  types.rs
src/endpoints/: aurora_profile_by_toon.rs  classic_files_global_maps_1v1.rs  gateway.rs  leaderboard.rs  leaderboard_entity.rs  leaderboard_name_search.rs  leaderboard_rank_by_toon.rs  map_stats_by_toon.rs  matchmaker_gameinfo_by_toon.rs  matchmaker_gameinfo_playerinfo.rs  mod.rs
src/models/: aurora_profile.rs  classic_files_global_maps_1v1.rs  common.rs  gateway.rs  leaderboard.rs  map_stats.rs  matchmaker_game_info.rs  matchmaker_player_info.rs  mod.rs
