[package]
name = "bw-web-api-rs"
version = "0.2.4"
edition = "2021"
description = "A Rust client for the StarCraft: Remastered API"
license = "MIT"
readme = "README.md"
keywords = ["starcraft", "blizzard", "gaming"]

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
urlencoding = "2.1"
